@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2741</build>
+	<build>Build 2745</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>21.04.2007 - 16:13</release_date>
+	<release_date>25.05.2007 - 16:07</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
